// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherPage When weather props are present should match snapshot 1`] = `
<div>
  <h1>
    Welcome to the weather page
  </h1>
  <button
    className="sc-bdVaJa fFBogb"
    onClick={[Function]}
  >
    <span>
      Fetch Weather from London
    </span>
  </button>
  <button
    className="sc-bdVaJa fFBogb"
    onClick={[Function]}
  >
    <span>
      Reset Weather
    </span>
  </button>
  <div
    className="sc-bwzfXH btqXMX"
  >
    <h1>
      Weather in London
    </h1>
    <table>
      <tbody>
        <tr>
          <th>
            Temperature
          </th>
          <th>
            Pressure
          </th>
          <th>
            Humidity
          </th>
        </tr>
        <tr>
          <td>
            289.08
          </td>
          <td>
            1027
          </td>
          <td>
            87
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`WeatherPage should match snapshot 1`] = `
<div>
  <h1>
    Welcome to the weather page
  </h1>
  <button
    className="sc-bdVaJa fFBogb"
    onClick={[Function]}
  >
    <span>
      Fetch Weather from London
    </span>
  </button>
  <button
    className="sc-bdVaJa fFBogb"
    onClick={[Function]}
  >
    <span>
      Reset Weather
    </span>
  </button>
</div>
`;
